src/forms/components/inputs/_input.scss
@import "../../../root.scss";

.formField {
    padding-bottom: 1rem;
}

.datePickerOverrides input {
    width: $ohri-input-width !important;
}

.formInputField {
    @extend .formField;
    width: $ohri-input-width;
}

.numberInputWrapper :global(.bx--number) {
    @extend .formField;
    width: $ohri-input-width;
    font-size: 0.875rem;
}

.textContainer label{
    font-size: 0.875rem !important;
}

.selectedOption {
  border-radius: 4px;
  width: 15rem;
}

.selectedOption button {
background-color: #ffffff;
}

.switchOverrides{
background-color: #edf5ff !important;
color: #0f62fe !important;
padding: 0 0 0 1rem;
border: solid 1px #0f62fe !important;
}

.switchOverrides:focus{
    border: none !important;
}

.selectedOption button:after{
    height: auto !important;
    background-color: #a6c8ff !important;
}

.switchOverridesNone{
background-color: #ffffff !important;
padding: 0 0 0 1rem;
border: solid 1px #edf5ff !important;
}

.radioButton_ohri input[type="radio"] {
    opacity : 0 !important; 
    position: fixed;
    width: 0;
    }
    
.radioButton_ohri  label {
    display: inline-block;
    border: 1px solid #a6c8ff;
    color: #525252;
    padding: 0.688rem 1rem;
    padding-right: 3rem;
    border-radius: 4px 0 0 4px;
    background-color: #ffffff;
}

.radioButton_ohri  label:last-child {
margin-left: -5px;
border-radius: 0 4px 4px 0;
}

.radioButton_ohri input[type="radio"]:checked + label {
color: #0f62fe;
border-color: #0f62fe;
background-color: #edf5ff;
}

.radioButton_ohri > .bx--radio-button-wrapper {
    margin-right: 0rem !important;
}
    

